@@ -27,7 +27,7 @@
 #  Contributor(s):
 # 
 #
-#  $Id: Makefile.in.libfbclient,v 1.27 2005-01-13 07:28:32 aafemt Exp $
+#  $Id: Makefile.in.libfbclient,v 1.28 2005-03-05 01:44:03 robocop Exp $
 #
 ROOT=..
 ObjModuleType=superclient
@@ -42,7 +42,7 @@ include     $(ROOT)/gen/make.shared.variables
 
 
 # These are deliberatly unexported otherwise gbak and others will try and check
-# the userid against the security.fdb database, which doesn't exist at this stage 
+# the userid against the security2.fdb database, which doesn't exist at this stage
 # in the build. MOD 11-July-2002
 
 unexport ISC_USER
