@@ -14,6 +14,7 @@
 
     * Security improvement
         Another layout of security.fdb
+        Also, security.fdb has been renamed security2.fdb
       Contributor(s):
         Alex Peshkov <peshkoff at mail.ru>
 
